protecting-api-endpoints/manifests/allow-access-to-reviews-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: reviews
 namespace: default
spec:
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/[your-sa]"] # Service Account name
   - source:
       namespaces: ["default"] # Namespace from which requests should be allowed
   to:
   - operation:
       methods: ["GET"]
       paths: ["/reviews/*"]
