protecting-api-endpoints/manifests/default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: deny-all
 namespace: default # Change to the namespace/s running your workloads
spec:
  {}
